css/d3.slider.css
.d3slider {
	z-index: 2;
	background-color: rgba(0,0,0, 0.8);
	padding:0;
	margin: 0;
	height: 150px;
}

.d3slider-rect-range {
  fill: #777;
  stroke: none;
}

.d3slider-rect-value {
  fill: #006EE3;
  stroke: none;
}

.d3slider-axis {
  position: relative;
  z-index: 1;
  cursor: pointer;
}

.d3slider-axis path {
  display: none;
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}



.d3slider text {
  font: 10px sans-serif;
	fill: white;
}

.tick.minor text {
  	display: none;
	fill: white;
}

.tick line {
  	stroke-width: 1;
	stroke: white;
}
.tick.minor line {
  stroke-width: 1;
  stroke: #bbb;
}

.dragger rect {
  fill: #71ACE3;
  stroke: none;
  z-index: 3;
}

.dragger line {
  stroke: #aa0000;
  fill: none;
}

.dragger-outer {
  fill: #fff;
  stroke: #000;
}

.dragger-inner {
  fill: #B30424;
  stroke: none;
}

.min-marker line {
  stroke: #aa0000;
  fill: none;
}

.overlay {
  fill: none;
  pointer-events: all;
  z-index: 1;
}

.sliderMappingLine {
	stroke-width: 2;
}

